# SplitLedger

./: .gitignore  Makefile  README.md  docker-compose.dev.yml
.claude/: settings.local.json
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6862a82b142d_initial_schema.py  dbc8cc0f1165_refresh_tokens_nullable_idempotency_user.py  e49a588aca48_partial_index_on_unpublished_events.py
backend/app/: auth.py  config.py  db.py  disputes.py  documents.py  errors.py  expenses.py  houses.py  idempotency.py  ledger.py  main.py  metrics.py  observability.py  outbox.py  pagination.py  permissions.py  recurring_bills.py  redis.py  scheduler.py  security.py  settlement_optimizer.py  settlements.py  split_rules.py  splits.py  storage.py  ws.py
backend/app/models/: __init__.py  auth.py  base.py  dispute.py  document.py  event.py  expense.py  house.py  ledger.py  notification.py  recurring_bill.py  split_rule.py  user.py
backend/scripts/: rebuild_balances.py
backend/tests/: conftest.py  factories.py  helpers.py  test_auth.py  test_disputes.py  test_documents.py  test_expenses.py  test_healthz.py  test_houses.py  test_idempotency.py  test_ledger_engine.py  test_ledger_invariants.py  test_metrics.py  test_migrations.py  test_outbox.py  test_permission_matrix.py  test_rebuild_balances.py  test_scheduler.py  test_settlement_optimizer.py  test_settlements.py  test_split_rules.py  test_splits.py  test_ws.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.test.tsx  App.tsx
